more and more taking shape

--- a/index.html
+++ b/index.html
@@ -4,45 +4,30 @@ title: Homepage
 ---
 
 
-<div style="padding:50px; margin:20px; border-style:none; border-color:gray; background:#E3E3E3">
-    <h1 style="padding-left:15%; padding-right:15%; text-align:center"> Welcome to my personal website!</h1>
-    <h1 style="padding-left:15%; padding-right:15%; text-align:center"> Have a look around!</h1>
-    <br> <br>
+<div class="about">
+	  <div class="container">
+		    <div class="jumbotron">
 
-    <h3 style="padding-left:0%; padding-right:15%; text-align:left"> Reach out over
-        <a href="mailto:alanpapalia@gmail.com" target="_blank">
-            email
-        </a>
-        or
-        <a href="//www.linkedin.com/in/alan-papalia-06883b105" target="_blank">
-            LinkedIn
-        </a>
-    </h3>
+			      <img src="/img/alan_welding.jpg" style="float:right; height:auto;max-width:400px;max-height:100%;margin:30px;" alt="Alan Papalia">
 
-    <h3>
-        Check out my
-        <a href="/projects/" target="_blank">
-            projects
-        </a> <br>
-    </h3>
+			      <h1 style="text-align:left">Alan Papalia</h1> <br> <br>
+				    <p style="text-align:left">
+				        I am a PhD student in Robotics with the Massachusetts Institute of Technology and the Woods Hole Oceanographic Institute <a href="https://mit.whoi.edu/"> Joint Program</a>. I'm fortunate to be working alongside great people in the <a href="http://marinerobotics.mit.edu"> Marine Robotics Group</a>, under <a href="https://meche.mit.edu/people/faculty/JLEONARD@MIT.EDU"> Prof. John Leonard</a>.
+            </p>
+            <br> <br> <br>
+
+			      <h2 style="text-align:left">Research Interests</h2> <br>
+ 				    <p style="text-align:left">
+                I'm excited about the potential of collaborative multi-robot systems in the future of our society. My research seeks to develop algorithms for robot collectives that allow for large numbers of robots to be deployed and accomplish tasks while leveraging the abilities of the group for substantial improvement gains. Simply put, I believe the <b> whole should be greater than the sum of its parts</b>.
+            </p>
+            <br> <br> <br>
 
 
-    <h3>
-        See my
-        <a href="/resume/" target="_blank">
-            resume and CV
-        </a> <br>
-    </h3>
 
-    <h3>
-        Read a little more
-        <a href="/about/" target="_blank">
-            about me
-        </a> <br>
-    </h3>
+            <p style="text-align:left">
+				        I'm always open to new opportunities! Send me an <a href="mailto:alanpapalia@gmail.com"> email </a> if you think our interests match.
 
-
+				    </p>
+		    </div>
+	  </div>
 </div>
-<div style="clear:both;"></div>
-
-
