partially filled out robotics section

--- a/experience/index.html
+++ b/experience/index.html
@@ -1,12 +1,11 @@
 ---
 layout: default
-title: Experience
 ---
 <div class="experience">
 
 	  <h1>Experience</h1>
 
-	  <h2>Education</h2>
+	  <h2 style="margin:10px;">Education</h2>
 
     <!-- Undergrad -->
 	  <div class="panel-group" id="accordion3">
@@ -63,7 +62,7 @@ title: Experience
 
 	  <br>
 
-	  <h2>Work Experience</h2>
+	  <h2 style="margin:10px;">Work Experience</h2>
 
 	  <div class="panel-group" id="accordion">
 
@@ -171,7 +170,7 @@ title: Experience
 
 	  <br>
 
-	  <h2>Leadership & Service</h2>
+	  <h2 style="margin:10px;">Leadership & Service</h2>
 	  <div class="panel-group" id="accordion2">
 
 			  <div class="panel panel-default">
