--- a/projects/robotics/index.html
+++ b/projects/robotics/index.html
@@ -1,6 +1,5 @@
 ---
 layout: default
-title: Robotics Projects
 ---
 
 
@@ -20,10 +19,12 @@ title: Robotics Projects
 		<div class="grid">
 			  <div class="grid-item">
             <div class="hovereffect">
-					      <img src="/img/fsae_car.jpg" class="img-responsive img-rounded projects" alt="FSAE Car">
+					      <img src="/img/grasp.png" class="img-responsive img-rounded projects" alt="Grasping Pose Estimation" style="max-height:400px; ">
 						    <div class="overlay">
-							      <h3>System Architecture</h3>
-							      <p>Lead system architect for the 2019 Illini Motorsports Vehicle.</p>
+							      <h3>6-DOF Pose Estimation</h3>
+							      <p>
+                        Implemented system for automated data collection and off-line pose estimation for generic predetermined objects for robotic grasping testbed
+                    </p>
 						    </div>
 					  </div>
 				</div>
@@ -31,50 +32,15 @@ title: Robotics Projects
 
 	      <div class="grid-item">
 				    <div class="hovereffect">
-					      <img src="/img/fsae_monocoque.jpeg" class="img-responsive img-rounded projects" alt="Fuel Tank">
+					      <img src="/img/miqcp.png" class="img-responsive img-rounded projects" alt="MIQCP Path Planning">
 					      <div class="overlay">
-						        <h3>Carbon-Fiber Hybrid Monocoque</h3>
+						        <h3>Mixed-Integer Model Predictive Control</h3>
 						        <p>
-                        Design, simulation, and validation of hybrid-monocoque chassis. Involved coordination with industry sponsors for specialty machining, modeling of mechanical properties, and extensive testing to derive fundamental material qualities.
+                        Developed simplified 2-D quadrotor environment and implemented mixed-integer program to perform path planning with model predictive control for non-convex space.
                     </p>
 					      </div>
 				    </div>
 			  </div>
-
-				<div class="grid-item">
-				    <div class="hovereffect">
-					      <img src="/img/fsae_fueltank.png" class="img-responsive img-rounded projects" alt="Fuel Tank">
-					      <div class="overlay">
-						        <h3>Fuel Tank</h3>
-						        <p>Design, waterjetting, and welding the fuel tank. I coordinated packaging requirements, ran fluids simulations to model sloshing behavior, and achieved weight reduction over prior year's versions.</p>
-					      </div>
-				    </div>
-			  </div>
-
-		    <div class="grid-item">
-				    <div class="hovereffect">
-					      <img src="/img/fsae_jigging.png" class="img-responsive img-rounded projects" alt="Chassis Jigging">
-					      <div class="overlay">
-						        <h3>Chassis Jigging</h3>
-						        <p>
-                        Design and fabrication of jigging for the entire chassis assembly.
-                    </p>
-					      </div>
-				    </div>
-			  </div>
-
-				<div class="grid-item">
-				    <div class="hovereffect">
-					      <img src="/img/materialtesting.png" class="img-responsive img-rounded projects" alt="Composite Material Testing">
-					      <div class="overlay">
-						        <h3>Composite Material Testing</h3>
-						        <p>
-                        Oversaw manufacturing of and testing of carbon-fiber and aluminum honeycomb sandwich panels to derive mechanical properties for structural design of composite chassis.
-                    </p>
-					      </div>
-				    </div>
-			  </div>
-
 
     </div>
 </div>
