--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 ---
 layout: home
-title: Homepage
 ---
 
 
@@ -8,9 +7,12 @@ title: Homepage
 	  <div class="container">
 		    <div class="jumbotron">
 
-			      <img src="/img/alan_welding.jpg" style="float:right; height:auto;max-width:400px;max-height:100%;margin:30px;" alt="Alan Papalia">
+			      <img src="/img/alan_welding.jpg" class="img-circle" style="float:right; height:auto;max-width:440px;max-height:100%;margin:30px;" alt="Alan Papalia">
 
-			      <h1 style="text-align:left">Alan Papalia</h1> <br> <br>
+			      <h1 style="text-align:left">Alan Papalia</h1>
+            <p> <small> <small> alanpapalia (at) gmail (dot) com</small> </small> </p>
+            <br> <br>
+
 				    <p style="text-align:left">
 				        I am a PhD student in Robotics with the Massachusetts Institute of Technology and the Woods Hole Oceanographic Institute <a href="https://mit.whoi.edu/"> Joint Program</a>. I'm fortunate to be working alongside great people in the <a href="http://marinerobotics.mit.edu"> Marine Robotics Group</a>, under <a href="https://meche.mit.edu/people/faculty/JLEONARD@MIT.EDU"> Prof. John Leonard</a>.
             </p>
@@ -18,16 +20,18 @@ title: Homepage
 
 			      <h2 style="text-align:left">Research Interests</h2> <br>
  				    <p style="text-align:left">
-                I'm excited about the potential of collaborative multi-robot systems in the future of our society. My research seeks to develop algorithms for robot collectives that allow for large numbers of robots to be deployed and accomplish tasks while leveraging the abilities of the group for substantial improvement gains. Simply put, I believe the <b> whole should be greater than the sum of its parts</b>.
+                I'm excited about the potential of collaborative multi-robot systems in the future of our society. My research seeks to develop algorithms for robot collectives that allow for large numbers of robots to leverage the abilities of the group for substantial improvement gains. Simply put, I believe the <b> whole should be greater than the sum of its parts</b>.
             </p>
             <br> <br> <br>
 
 
 
             <p style="text-align:left">
-				        I'm always open to new opportunities! Send me an <a href="mailto:alanpapalia@gmail.com"> email </a> if you think our interests match.
-
+				        I'm always open to opportunities! Send me an <a href="mailto:alanpapalia@gmail.com"> email </a> or reach out over <a href="//www.linkedin.com/in/alan-papalia-06883b105">LinkedIn</a> if you think our interests match.
 				    </p>
+
+
+
 		    </div>
 	  </div>
 </div>
