removed headers from project pages

--- a/projects/mechanical/index.html
+++ b/projects/mechanical/index.html
@@ -8,7 +8,7 @@ layout: default
 <div class="container">
 	 	<h1>Mechanical Design</h1>
     <h1>
-			  <small> In addition to robotics, I've also done a fair bit of work in mechanical design, manufacturing, and validation. <small><strong><i> Hover over the images to learn more.</i></strong></small></small>
+			  <!-- <small> In addition to robotics, I've also done a fair bit of work in mechanical design, manufacturing, and validation. <small><strong><i> Hover over the images to learn more.</i></strong></small></small> -->
 		</h1>
 		<br>
 </div>
