--- a/projects/robotics/index.html
+++ b/projects/robotics/index.html
@@ -6,7 +6,7 @@ layout: default
 <div class="container">
 	 	<h1>Robotics</h1>
     <h1>
-			  <small> I'm excited for what developments in robotics will bring and hope to contribute to the field </small>
+			  <!-- <small> I'm excited for what developments in robotics will bring and hope to contribute to the field </small> -->
 		</h1>
     <p> <i>
         Hover over the images to learn more
