updated main page

--- a/index.html
+++ b/index.html
@@ -179,21 +179,22 @@
                 </div>
                 <div class="col-12 col-lg-8">
                     <h1>Biography</h1>
-                    <p>I am a PhD student in Robotics with the Massachusetts Institute of Technology and the Woods Hole Oceanographic Institute <a href="https://mit.whoi.edu/"> Joint Program</a>. I&rsquo;m fortunate to be working alongside great people in
-                        the <a href="http://marinerobotics.mit.edu"> Marine Robotics Group</a>, under <a href="https://meche.mit.edu/people/faculty/JLEONARD@MIT.EDU"> Prof. John Leonard</a>.</p>
-                    <p>I&rsquo;m excited about the potential of collaborative multi-robot systems in the future of our society. My research seeks to leverage graph theory, probability, and optimization to develop algorithms for multi-robot systems that allow
-                        for robots to robustly accomplish tasks in uncertain environments.</p>
+                    <p>I am a PhD student in Robotics with the Massachusetts Institute of Technology and the Woods Hole Oceanographic Institute <a href="https://mit.whoi.edu/"> Joint Program</a>. I&rsquo;m fortunate to work alongside great people in the
+                        <a href="http://marinerobotics.mit.edu"> Marine Robotics Group</a>, under <a href="https://meche.mit.edu/people/faculty/JLEONARD@MIT.EDU"> Prof. John Leonard</a>.</p>
+                    <p>My research leverages graph theory, geometry, and probability to build novel optimization algorithms which enable robust localization and mapping in the real world.</p>
                     <p>Before working in robotics I spent my undergraduate years working with a great group of people on the <a href="https://motorsports.illinois.edu/"> Illini Motorsports Formula SAE </a> team. Here I oversaw a team of over 40 members,
                         engaged in a number of mechanical design projects, and took part in a number of international competitions.</p>
-                    <p>I&rsquo;m always open to opportunities! Send me an <a href="mailto:alanpapalia@gmail.com"> email </a> or reach out over <a href="//www.linkedin.com/in/alan-papalia-06883b105">LinkedIn</a> if you think our interests match.</p>
+                    <p>Helping to mitigate climate change is of huge importance to me and is a central aspect to my future plans.</p>
+                    <p>I&rsquo;m always open to chat! Send me an
+                        <a href="mailto:alanpapalia@gmail.com"> email </a> or reach out over <a href="//www.linkedin.com/in/alan-papalia-06883b105">LinkedIn</a> if you think there's an idea or opportunity that we'd both like to discuss.</p>
                     <div class="row">
                         <div class="col-md-5">
                             <h3>Interests</h3>
                             <ul class="ul-interests">
-                                <li>Automation</li>
                                 <li>Robotics</li>
                                 <li>SLAM</li>
-                                <li>Path Planning</li>
+                                <li>Perception</li>
+                                <li>Climate Change</li>
                             </ul>
                         </div>
                         <div class="col-md-7">
